add caches, move JAVA_OPTS and JENKINS_ARGS to env.sh